--- a/index.html
+++ b/index.html
@@ -5,3 +5,17 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>My portfolio</title>
 </head>
+    
+<body>
+    <header>
+        <h1>My Portfolio</h1>
+        <p> Insert catchy tagline here</p>
+        <nav>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/ahrar-b-1280b4102/">LinkedIn</a></li>
+                <li><a href="mailto:ahrar.bashar96@gmail.com">Email</a></li>
+                <li><a href="https://github.com//bashar147258">Github</a></li>   
+                <li><a href="#">Resume</a></li> 
+            </ul>
+        </nav>
+    </header>
