--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="utf-8"> <!--utf encoding-->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My portfolio</title>
 </head>
-    
+
+
 <body>
     <header>
         <h1>My Portfolio</h1>
-        <p> Insert catchy tagline here</p>
+        <p class="byheading"> Insert catchy tagline here</p>
+        <img class ="avatar" src="./assets/images/avatar.jpg" alt="avatar" loading="lazy">
         <nav>
             <ul>
                 <li><a href="https://www.linkedin.com/in/ahrar-b-1280b4102/">LinkedIn</a></li>
@@ -18,4 +21,8 @@
                 <li><a href="#">Resume</a></li> 
             </ul>
         </nav>
+        <h2>About Me</h2>
+        <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed vulputate odio ut enim blandit volutpat maecenas volutpat. Ornare massa eget egestas purus viverra accumsan in nisl. Donec ac odio tempor orci dapibus ultrices in. Montes nascetur ridiculus mus mauris vitae ultricies. Orci sagittis eu volutpat odio. Morbi quis commodo odio aenean sed adipiscing diam. Non nisi est sit amet facilisis magna etiam tempor. Purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing elit. Maecenas sed enim ut sem viverra aliquet eget. Quam vulputate dignissim suspendisse in. Velit egestas dui id ornare. Maecenas pharetra convallis posuere morbi leo urna molestie at elementum.</p>
+        </article>
     </header>
