--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <h1>My Portfolio</h1>
         <p class="byheading"> Insert catchy tagline here</p>
+        <!--Placeholder Image-->
         <img class ="avatar" src="./assets/images/avatar.jpg" alt="avatar" loading="lazy">
         <nav>
             <ul>
@@ -22,7 +23,51 @@
             </ul>
         </nav>
         <h2>About Me</h2>
-        <article>
+        <!--Placeholder about me-->
+        <article> 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed vulputate odio ut enim blandit volutpat maecenas volutpat. Ornare massa eget egestas purus viverra accumsan in nisl. Donec ac odio tempor orci dapibus ultrices in. Montes nascetur ridiculus mus mauris vitae ultricies. Orci sagittis eu volutpat odio. Morbi quis commodo odio aenean sed adipiscing diam. Non nisi est sit amet facilisis magna etiam tempor. Purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing elit. Maecenas sed enim ut sem viverra aliquet eget. Quam vulputate dignissim suspendisse in. Velit egestas dui id ornare. Maecenas pharetra convallis posuere morbi leo urna molestie at elementum.</p>
         </article>
     </header>
+
+    <!--Project showcase-->
+    <!--Clicking on the image should take user to live deployed site-->
+    <!--Clicking on text link should take user to github repo-->
+    <main>
+        <h2>My projects</h2>
+        <section class="projects">
+            <div class="projectHighlight">  
+               <a href="https://bashar147258.github.io/week1CodeRefactorProject/" target="_blank"><img src="https://raw.githubusercontent.com/bashar147258/week1CodeRefactorProject/master/assets/01-html-css-git-homework-demo.png" loading="lazy"  alt="image"></a>
+               <a href="https://github.com/bashar147258/week1CodeRefactorProject/"><p class="subheading">Html refactor</p></a>
+               <p class="byheading">HTML, CSS</p>
+            </div>
+
+            <div class="projectContainer">  
+                    <a href="#" target="_blank"><img src="./assets/images/placeholder_1.jpg" loading="lazy"  alt="image"></a>
+                    <a href="#" target="_blank"><p class="subheading">Algorithms</p></a>
+                    <p class="byheading">HTML, JavaScript</p>
+            </div>
+
+            <div class="projectContainer">  
+                    <a href="#" target="_blank"><img src="./assets/images/placeholder_1.jpg" loading="lazy"  alt="image"></a>
+                    <a href="#" target="_blank"><p class="subheading">CSS Reference Sheet</p></a>
+                    <p class="byheading">CSS, HTML</p>
+            </div>
+
+            <div class="projectContainer">  
+                    <a href="#" target="_blank"><img src="./assets/images/placeholder_1.jpg" loading="lazy"  alt="image"></a>
+                    <a href="#" target="_blank"><p class="subheading">Placeholder</p></a>
+            </div>
+        </section>
+    </main>
+        <footer>
+            Under Construction
+        </footer>
+</body>
+
+
+
+
+
+</html>
+
+
