Updated next week's task

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="projectContainer">  
                     <a href="#" target="_blank"><img src="./assets/images/placeholder_1.jpg" loading="lazy"  alt="image"></a>
-                    <a href="#" target="_blank"><p class="subheading">Algorithms</p></a>
+                    <a href="#" target="_blank"><p class="subheading">Password Generator</p></a>
                     <p class="byheading">HTML, JavaScript</p>
             </div>
 
