--- a/index.html
+++ b/index.html
@@ -35,28 +35,37 @@
     <main>
         <h2>My projects</h2>
         <section class="projects">
-            <div class="projectHighlight">  
+            <div class="projectContainer">  
                <a href="https://bashar147258.github.io/week1CodeRefactorProject/" target="_blank"><img src="https://raw.githubusercontent.com/bashar147258/week1CodeRefactorProject/master/assets/01-html-css-git-homework-demo.png" loading="lazy"  alt="image"></a>
                <a href="https://github.com/bashar147258/week1CodeRefactorProject/"><p class="subheading">Html refactor</p></a>
                <p class="byheading">HTML, CSS</p>
             </div>
 
-            <div class="projectContainer">  
-                    <a href="#" target="_blank"><img src="./assets/images/placeholder_1.jpg" loading="lazy"  alt="image"></a>
-                    <a href="#" target="_blank"><p class="subheading">Password Generator</p></a>
-                    <p class="byheading">HTML, JavaScript</p>
+            <div class="projectHighlight">  
+                    <a href="https://bashar147258.github.io/HTMLQuiz/" target="_blank"><img src="https://raw.githubusercontent.com/bashar147258/HTMLQuiz/main/HTMLQuiz.png" loading="lazy"  alt="image"></a>
+                    <a href="https://github.com/bashar147258/HTMLQuiz/" target="_blank"><p class="subheading">HTML Quiz</p></a>
+                    <p class="byheading">HTML, CSS, JavaScript</p>
             </div>
 
             <div class="projectContainer">  
-                    <a href="#" target="_blank"><img src="./assets/images/placeholder_1.jpg" loading="lazy"  alt="image"></a>
-                    <a href="#" target="_blank"><p class="subheading">CSS Reference Sheet</p></a>
-                    <p class="byheading">CSS, HTML</p>
+                    <a href="https://bashar147258.github.io/WorkDayScheduler/" target="_blank"><img src="https://raw.githubusercontent.com/bashar147258/WorkDayScheduler/main/Assets/05-third-party-apis-homework-demo.gif" loading="lazy"  alt="image"></a>
+                    <a href="https://github.com/bashar147258/WorkDayScheduler/" target="_blank"><p class="subheading">Work Day Scheduler</p></a>
+                    <p class="byheading">Bootstrap, MomentJS, Javascript</p>
             </div>
 
-            <div class="projectContainer">  
-                    <a href="#" target="_blank"><img src="./assets/images/placeholder_1.jpg" loading="lazy"  alt="image"></a>
-                    <a href="#" target="_blank"><p class="subheading">Placeholder</p></a>
+            <div class="projectHighlight">  
+                    <a href="https://bashar147258.github.io/WeatherDashboard/" target="_blank"><img src="https://raw.githubusercontent.com/bashar147258/WeatherDashboard/main/Assets/Sample/Athens.png" loading="lazy"  alt="image"></a>
+                    <a href="https://github.com/bashar147258/WeatherDashboard/" target="_blank"><p class="subheading">Weather Dashboard</p></a>
+                    <p class="byheading">Openweather API, JavaScript</p>
             </div>
+
+            <div class="projectHighlight">  
+                <a href="https://mckinleyvj.github.io/books-r-us/" target="_blank"><img src="https://user-images.githubusercontent.com/87624839/136368265-ef47f4a0-5561-44ae-a2a3-9502a127d4f6.png" loading="lazy"  alt="image"></a>
+                <a href="https://github.com/mckinleyvj/books-r-us/" target="_blank"><p class="subheading">Project 1 (Books-r-us)</p></a>
+                <p class="byheading">Googlebooks API, NYT API, Javascript</p>
+            </div>
+
+        
         </section>
     </main>
         <footer>
