--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                <p class="byheading">HTML, CSS</p>
             </div>
 
-            <div class="projectHighlight">  
+            <div class="projectContainer">  
                     <a href="https://bashar147258.github.io/HTMLQuiz/" target="_blank"><img src="https://raw.githubusercontent.com/bashar147258/HTMLQuiz/main/HTMLQuiz.png" loading="lazy"  alt="image"></a>
                     <a href="https://github.com/bashar147258/HTMLQuiz/" target="_blank"><p class="subheading">HTML Quiz</p></a>
                     <p class="byheading">HTML, CSS, JavaScript</p>
@@ -63,6 +63,12 @@
                 <a href="https://mckinleyvj.github.io/books-r-us/" target="_blank"><img src="https://user-images.githubusercontent.com/87624839/136368265-ef47f4a0-5561-44ae-a2a3-9502a127d4f6.png" loading="lazy"  alt="image"></a>
                 <a href="https://github.com/mckinleyvj/books-r-us/" target="_blank"><p class="subheading">Project 1 (Books-r-us)</p></a>
                 <p class="byheading">Googlebooks API, NYT API, Javascript</p>
+            </div>
+            
+               <div class="projectHighlight">  
+                <a href="https://pilots-logbook.herokuapp.com/" target="_blank"><img src="https://user-images.githubusercontent.com/87624839/136368265-ef47f4a0-5561-44ae-a2a3-9502a127d4f6.png" loading="lazy"  alt="image"></a>
+                <a href="https://github.com/PFZM/Pilot-Log" target="_blank"><p class="subheading">Project 2 (The Captain's Log)</p></a>
+                <p class="byheading">Node,js Handlebars, SQL, TailwindCSS</p>
             </div>
 
         
